--- a/client/src/styles/dashboardStyles.css
+++ b/client/src/styles/dashboardStyles.css
@@ -3,19 +3,29 @@
   margin-top: 20px;
 }
 /* LECTURE Form */
+#create-lecture-btn {
+  border-radius: 20px;
+}
+#create-lecture-btn:hover {
+  background-color: white;
+  color: black;
+}
 #create-lecture-a {
-  background-color: #685ed6;
+  background-color: #00359f;
   color: white;
   border-radius: 0;
   padding: 2px 10px;
   font-size: 13px;
 }
 #create-lecture-a:hover {
-  background-color: #363993;
+  background-color: #4580ff;
 }
 /* Lectures */
 .create-lecture-container {
   margin-top: 8px;
+}
+.create-lecture-container button {
+  border-radius: 0;
 }
 .lecture-list {
   overflow-y: scroll;
@@ -27,21 +37,22 @@
 #lecture-card {
   background-color: white;
   padding: 10px 20px 20px 40px;
-  border-radius: 0;
+  border-radius: 10px;
   border-bottom: 0.25px solid #b5b5b5;
   margin-bottom: 30px;
 }
+
 #lecture-card:hover {
   cursor: pointer;
   box-shadow: 2px 6px 8px 4px rgba(0, 0, 0, 0.2);
 }
 #lecture-card h5 {
-  color: #685ed6;
+  color: #0050ef;
   display: inline;
 }
 .lecture-card-content a {
   font-size: 12px;
-  color: #363993;
+  color: #00359f;
 }
 #live-status {
   margin: 10px 0 0 0;
@@ -63,15 +74,15 @@
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: #d5c9ff;
+  background-color: #8cb3ff;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #685ed6;
+  background: #0050ef;
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #438be0;
+  background: #00359f;
 }
 /* Courses */
 #feed-column {
@@ -91,8 +102,9 @@
   float: right;
   width: 200px;
 }
+
 #course-list-title {
-  color: #363993;
+  color: #00359f;
   font-weight: bold;
 }
 #course-card {
@@ -104,11 +116,11 @@
   border-top: 1px solid #e2e2e2;
 }
 #course-card h5 {
-  color: #363993;
+  color: #0050ef;
   font-size: 15px;
 }
 #course-card h6 {
-  color: #685ed6;
+  color: ##0050ef;
 }
 #course-card small {
   color: #988dfc;
