Confirm opening lecture, some UI fixes and a progress bar in the lecture page

--- a/client/src/styles/formStyles.css
+++ b/client/src/styles/formStyles.css
@@ -25,7 +25,7 @@
 }
 .lecture-form {
   background-color: white;
-  margin-top: 5%;
+  margin-top: 20px;
   border: 0.75px solid #e5e5e5;
   border-radius: 10px;
   padding: 20px;
