--- a/client/src/styles/lectureStyles.css
+++ b/client/src/styles/lectureStyles.css
@@ -59,3 +59,23 @@
   display: flex;
   align-items: baseline;
 }
+#delete-lecture-btn {
+  font-size: 12px;
+  padding: 1px 3px;
+  margin-top: 10px;
+  border-radius: 20px;
+}
+#cancelDelete {
+  padding: 2px 6px;
+  font-size: 12px;
+  border-radius: 20px;
+  margin-top: 25px;
+}
+#lecture-delete-body {
+  padding: 8px;
+}
+/* Charts */
+.bar-chart-container:hover {
+  transition-duration: 1.5s;
+  box-shadow: 2px 6px 8px 4px rgba(0, 0, 0, 0.2);
+}
